<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text="Получаемая валюта"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/tv_result"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_output_curr"
        style="@style/selector"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/btn_exchange" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@id/tv_input_curr"
        app:layout_constraintEnd_toStartOf="@+id/tv_input_curr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@id/tv_input_curr" />

    <TextView
        android:id="@+id/tv_input_curr"
        style="@style/selector"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/et_input"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/text_view_border"
        android:freezesText="true"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_output_curr"
        app:layout_constraintEnd_toStartOf="@+id/tv_output_curr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_output_curr" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:gravity="top|right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Исходная валюта"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />


    <ImageButton
        android:id="@+id/btn_exchange"
        style="@style/exchanger"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_input_curr"
        app:layout_constraintStart_toStartOf="@+id/tv_input_curr"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_curr"
        app:srcCompat="@drawable/ic_import_export_black_24dp" />

</android.support.constraint.ConstraintLayout>