<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal">
    <SearchView
        android:id="@+id/search_dialog_searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </SearchView>
    <ListView
        android:id="@+id/search_dialog_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
</LinearLayout>